fix: fix z-index => alert icon and contents

--- a/src/components/Detail/RemindingStock.scss
+++ b/src/components/Detail/RemindingStock.scss
@@ -3,7 +3,7 @@
     position: fixed;
     bottom: 50px;
     right: 50px;
-    z-index: 1;
+    z-index: 100;
     width: 50px;
     height: 50px;
     border: none;
@@ -16,6 +16,7 @@
     position: fixed;
     bottom: 75px;
     right: 50px;
+    z-index: 1;
     background: #333;
     .stocklist {
     }
